# walletd-hedera-integration

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
contracts/: MyContract.sol
src/: main.rs
src/mainnet/: mod.rs
