[package]
name = "hedera_mainnet_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hedera = { git = "https://github.com/hashgraph/hedera-sdk-rust.git" }
anyhow = "1.0"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] } # If needed
serde_json = "1.0"                                 # If needed
